--- a/Project/package.json
+++ b/Project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.13.2",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
